# UniCalendar

./: LICENSE  README.md  mcp_server.py  pyproject.toml  requirements.txt  uni_calendar.db
app/: config.py  database.py  dependencies.py  main.py
app/api/: __init__.py  auth.py  calendar_feed.py  event_groups.py  events.py  legacy.py  oauth.py  reminders.py  share_groups.py  todos.py
app/caldav/: etag.py  ical_builder.py  ical_parser.py  router.py  xml_utils.py
app/core/: reminder_manager.py  rrule_engine.py  security.py
app/models/: __init__.py  oauth.py
app/schemas/: __init__.py
app/services/: __init__.py  calendar_feed_service.py  event_service.py  group_service.py  oauth_service.py  reminder_service.py  share_group_service.py  todo_service.py
docs/: api.md  caldav.md  mcp.md  oauth.md
scripts/: migrate.py
tests/: test_api.py
