[project]
name = "uni-calendar-api"
version = "1.0.0"
description = "UniCalendar backend — RESTful API with OAuth Provider"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.30,<0.35",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "aiosqlite>=0.20,<0.21",
    "alembic>=1.14,<1.15",
    "pydantic>=2.10,<2.11",
    "pydantic-settings>=2.7,<2.8",
    "python-dateutil>=2.9,<3.0",
    "icalendar>=5.0,<6.0",
    "authlib>=1.3,<1.4",
    "python-jose[cryptography]>=3.3,<4.0",
    "bcrypt>=4.0,<5.0",
    "python-multipart>=0.0.12,<0.1",
    "markdown>=3.7,<4.0",
    "aiofiles>=24.1,<25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<8.4",
    "pytest-asyncio>=0.24,<0.25",
    "httpx>=0.28,<0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
